--- a/JavaScript/快速入门/index.html
+++ b/JavaScript/快速入门/index.html
@@ -1,8 +1,16 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <script src="./static/js/abc.js"></script>
+    <meta charset="utf-8"> 
   </head>
   <body>
-    <h1>Index</h1>
+    <h1>我的 Web 页面</h1>
+    <p id='demo'>一个段落</p>
+    <div id="myDIV">一个 DIV。</div>
+    <!--<button type="button" onclick="myFunc()">尝试一下</button>-->
+    <script>
+      document.getElementById("demo").innerHTML="你好 Dolly";
+      document.getElementById("myDIV").innerHTML="你最近怎么样?";
+    </script>
   </body>
 </html>
