--- a/JavaScript/快速入门/index.html
+++ b/JavaScript/快速入门/index.html
@@ -2,15 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8"> 
+    <title>JavaScript Learning</title>
   </head>
+
   <body>
-    <h1>我的 Web 页面</h1>
-    <p id='demo'>一个段落</p>
-    <div id="myDIV">一个 DIV。</div>
-    <!--<button type="button" onclick="myFunc()">尝试一下</button>-->
-    <script>
-      document.getElementById("demo").innerHTML="你好 Dolly";
-      document.getElementById("myDIV").innerHTML="你最近怎么样?";
-    </script>
+    <!--
+    <button onclick="getElementById('demo').innerHTML=Date()">现在时间是？？</button>
+    <p id="demo"></p>
+    -->
+    <button onclick="this.innerHTML=Date()">现在时间是？？</button>
   </body>
 </html>
